# lex-planning-files

./: .env.example  .env.staging  .gitignore  IMMUTABLE_WORKFLOW_MASTER_ROADMAP.md  LOCAL_DEVELOPMENT.md  Makefile  PROJECT_MANIFEST.md  README.md  SPEC_HASHES.md  docker-compose.yml  exev1.md  lex full table summary (1).md  pyproject.toml
.github/skills/: SKILLS_MANIFEST.json
.windsurf/workflows/: HORDE_AUDIT_WORKFLOW.md
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_pgvector_indexes.sql
backend/tests/: conftest.py
docs/: ERD_COMPLETE.dbml  ERD_LexCore.mmd  ERD_LexRadar.mmd  FULL_BUILD_SYSTEM_V2_COMPLETE.md  HORDE-AUDIT_ARCHITECTURE.md  dependency_graph.dot  dependency_graph.mmd  infrastructure_requirements.md  ingest_connectors.md  ingest_pipeline.md  openapi.json  openapi.yaml  security_pipeline_requirements.md  topological_validation.md
docs/03-data/: CONNECTION_POOL_CONFIG.md  CONSTRAINT_REGISTRY.json  ERD.md  SCHEMA_HASH.txt  SCHEMA_MAP.json
docs/api/: API_HASH.txt  API_SPEC.md  AUTH_FLOW.md  ERROR_CODES.md  MCP_TOOLS.md  RATE_LIMIT_POLICY.md  SECURITY_HEADERS.md
docs/architecture/: ARCHITECTURE_REVIEW.md  ARCH_HASH.txt  BUILD_SETUP_GUIDE.md  CONSUMER_MAP.json  DEPENDENCY_GRAPH.json  EVENT_SCHEMA_REGISTRY.json  INTERFACE_CONTRACTS.json  SKILLS_ROADMAP_CHECKLIST.md  SYSTEM_LAYERS.md  TEAM_SKILLS_MATRIX.md
docs/spec/: JTBD_MAP.md  (+5 more)
scripts/: horde_audit.py  pen_test.py  setup-local.sh  skills_manager.py  validate_build.py  validate_predictability.py
(+248 files in other folders)
